force-app/main/default/objects/Rebate__c/Rebate__c.object-meta.xml
<CustomObject>
    <description>Stores and manages information relating to Rebates which have been given to Accounts.</description>
    <label>Rebate</label>
    <nameField>
        <displayFormat>Rebate-{00000}</displayFormat>
        <label>Rebate</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>