force-app/main/default/objects/Rebate__c/fields/Accrual_Is_Setup_On_Finance_System__c.field-meta.xml
<CustomField>
    <fullName>Accrual_Is_Setup_On_Finance_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accrual Is Setup On Finance System</label>
    <type>Checkbox</type>
</CustomField>