force-app/main/default/objects/Rebate__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rebates (Beneficiary)</relationshipLabel>
    <relationshipName>Rebate_Beneficiary</relationshipName>
    <type>Lookup</type>
</CustomField>