force-app/main/default/objects/Rebate__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Acuerdo__c</description>
    <label>Code</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>