force-app/main/default/objects/Rebate__c/fields/EUR__c.field-meta.xml
<CustomField>
    <fullName>EUR__c</fullName>
    <label>EUR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>