force-app/main/default/objects/Rebate__c/fields/Explanation_of_Rebate_Accrual_Basis__c.field-meta.xml
<CustomField>
    <fullName>Explanation_of_Rebate_Accrual_Basis__c</fullName>
    <description>Explanation of how the Rebate is to be accrued for accounting purposes</description>
    <inlineHelpText>Explanation of how the Rebate is to be accrued for accounting purposes</inlineHelpText>
    <label>Explanation of Rebate Accrual Basis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>