force-app/main/default/objects/Rebate__c/fields/Full_Rebate_Detail_Sheet_Attached__c.field-meta.xml
<CustomField>
    <fullName>Full_Rebate_Detail_Sheet_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box when you have attached the relevant files outlining the full details of the Rebate. The Rebate request cannot be submitted for approval until this is done.</description>
    <inlineHelpText>Check this box when you have attached the relevant files outlining the full details of the Rebate. The Rebate request cannot be submitted for approval until this is done.</inlineHelpText>
    <label>Full Rebate Detail Sheet Attached</label>
    <type>Checkbox</type>
</CustomField>