force-app/main/default/objects/Rebate__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <description>Condicion__c</description>
    <label>Percentage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>