force-app/main/default/objects/Rebate__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product lookup on Rebate</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Rebates</relationshipLabel>
    <relationshipName>Rebates</relationshipName>
    <type>Lookup</type>
</CustomField>