force-app/main/default/objects/Rebate__c/fields/Provision__c.field-meta.xml
<CustomField>
    <fullName>Provision__c</fullName>
    <description>Provision field on Rebate</description>
    <label>Provision</label>
    <length>20</length>
    <type>Text</type>
</CustomField>