force-app/main/default/objects/Rebate__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Spaing migration User story EVM-115 Rebates on Quotes</description>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Rebates</relationshipLabel>
    <relationshipName>Rebates</relationshipName>
    <type>Lookup</type>
</CustomField>