force-app/main/default/objects/Rebate__c/fields/Reason_for_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Rebate__c</fullName>
    <description>Please enter a description of the Rebate including the reason why it is being requested.</description>
    <inlineHelpText>Please enter a description of the Rebate including the reason why it is being requested.</inlineHelpText>
    <label>Reason for Rebate</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>