force-app/main/default/objects/Rebate__c/fields/Rebate_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Commencement_Date__c</fullName>
    <label>Rebate Commencement Date</label>
    <type>Date</type>
</CustomField>