force-app/main/default/objects/Rebate__c/fields/Rebate_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Expiry_Date__c</fullName>
    <label>Rebate Expiry Date</label>
    <type>Date</type>
</CustomField>