force-app/main/default/objects/Rebate__c/fields/Registry_Number__c.field-meta.xml
<CustomField>
    <fullName>Registry_Number__c</fullName>
    <description>Num_Resgistro</description>
    <label>Registry Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>