force-app/main/default/objects/Rebate__c/fields/Scales__c.field-meta.xml
<CustomField>
    <fullName>Scales__c</fullName>
    <description>Escala</description>
    <label>Scales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>