force-app/main/default/objects/Rebate__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status</description>
    <label>Status</label>
    <length>3</length>
    <type>Text</type>
</CustomField>