force-app/main/default/objects/Rebate__c/recordTypes/Rebate_Encirc.recordType-meta.xml
<RecordType>
    <fullName>Rebate_Encirc</fullName>
    <active>true</active>
    <label>Rebate (Encirc)</label>
</RecordType>