force-app/main/default/objects/Rebate__c/recordTypes/Rebate_Fifty.recordType-meta.xml
<RecordType>
    <fullName>Rebate_Fifty</fullName>
    <active>true</active>
    <label>Rebate (Fifty)</label>
</RecordType>