force-app/main/default/objects/Rebate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Percentage__c</columns>
    <columns>Product__c</columns>
    <columns>Scales__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Rebate_Commencement_Date__c</columns>
    <columns>Rebate_Expiry_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>