force-app/main/default/objects/Rebate__c/listViews/EN60.listView-meta.xml
<ListView>
    <fullName>EN60</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Rebate_Commencement_Date__c</columns>
    <columns>Rebate_Expiry_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Sales_Org_Name__c</columns>
    <columns>Sales_Org_SAP_Code__c</columns>
    <columns>Sales_Organisation_Name__c</columns>
    <columns>Sales_Organisation__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Org_SAP_Code__c</field>
        <operation>equals</operation>
        <value>EN60</value>
    </filters>
    <label>EN60</label>
</ListView>