force-app/main/default/objects/Rebate__c/listViews/Encirc_Rebates.listView-meta.xml
<ListView>
    <fullName>Encirc_Rebates</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Rebate__c.Rebate_Encirc</value>
    </filters>
    <label>Encirc Rebates</label>
</ListView>