force-app/main/default/objects/Rebate__c/listViews/Fifty_Rebates.listView-meta.xml
<ListView>
    <fullName>Fifty_Rebates</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Approval_Status__c</columns>
    <columns>Rebate_Commencement_Date__c</columns>
    <columns>Rebate_Expiry_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Quantity__c</columns>
    <columns>Unit_Type__c</columns>
    <columns>Scales__c</columns>
    <columns>Percentage__c</columns>
    <columns>Provision__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Rebate__c.Rebate_Fifty</value>
    </filters>
    <label>Fifty Rebates</label>
</ListView>