force-app/main/default/objects/Rebate__c/listViews/Fifty_Regional_Sales_Office_Rebate.listView-meta.xml
<ListView>
    <fullName>Fifty_Regional_Sales_Office_Rebate</fullName>
    <filterScope>Queue</filterScope>
    <label>Fifty Regional Sales Office</label>
    <queue>Fifty_Regional_Sales_Office</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>